--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "Dark Mode": "Dark Mode",
-  "Español": "Español",
+  "Spanish": "Spanish",
   "Skip Onboarding": "Skip Onboarding",
   "Needs Backup": "Needs Backup",
   "Selected": "Selected",
@@ -11,7 +11,7 @@
   "Please enter your PIN": "Please enter your PIN",
   "Incorrect PIN, try again": "Incorrect PIN, try again",
   "Confirm your PIN": "Confirm your PIN",
-  "Try again in ": "Try again in ",
+  "Try again in ": "Try again in {{time}}",
   "Buy Crypto": "Buy Crypto",
   "Buy crypto with cash": "Buy crypto with cash",
   "Exchange": "Exchange",
@@ -109,6 +109,7 @@
   "This additional verification will allow your device to be marked as a verified device. You will be securely connected to your BitPay ID without having to login. Please go to your authenticator app and enter the new verification code generated.": "This additional verification will allow your device to be marked as a verified device. You will be securely connected to your BitPay ID without having to login. Please go to your authenticator app and enter the new verification code generated.",
   "We sent a verification email to. Open the link inside to continue.": "We sent a verification email to {{email}}. Open the link inside to continue.",
   "Email didn't arrive?": "Email didn't arrive?",
+  "Resend link": "Resend link",
   "Pairing failed": "Pairing failed",
   "No pairing data received.": "No pairing data received.",
   "Sync Gift Card Purchases": "Sync Gift Card Purchases",
@@ -170,7 +171,7 @@
   "CustomizeVirtualCardDescription": "Support your favorite crypto by customizing* your virtual card.",
   "CustomizeVirtualCardDisclaimer": "*This design will not apply to your physical card.",
   "Save Customization": "Save Customization",
-  "Hey, checkout BitPay's new card. You can convert crypto to dollars easily. Just get the app, set up a wallet, and order the card using my code ": "Hey, checkout BitPay's new card. You can convert crypto to dollars easily. Just get the app, set up a wallet, and order the card using my code ",
+  "Hey, checkout BitPay's new card. You can convert crypto to dollars easily. Just get the app, set up a wallet, and order the card using my code .": "Hey, checkout BitPay's new card. You can convert crypto to dollars easily. Just get the app, set up a wallet, and order the card using my code {{code}}.",
   "Refer a friend and get $10": "Refer a friend and get $10",
   "Share the referral code below and we'll load $10 on your card and your friend's card after they sign up and load their first $100.": "Share the referral code below and we'll load $10 on your card and your friend's card after they sign up and load their first $100.",
   "Uh oh, something went wrong retrieving your referral code. Please try again later.": "Uh oh, something went wrong retrieving your referral code. Please try again later.",
@@ -436,7 +437,6 @@
   "Portfolio balance": "Portfolio balance",
   "Your Portfolio Balance is the total of all your crypto assets.": "Your Portfolio Balance is the total of all your crypto assets.",
   "Last Day": "Last Day",
-  "Add ": "Add ",
   "Shop with Crypto": "Shop with Crypto",
   "Do More": "Do More",
   "Exchange Rates": "Exchange Rates",
@@ -587,6 +587,7 @@
   "Your phone number will be used to secure your gift card with 2-factor authentication.": "Your phone number will be used to secure your gift card with 2-factor authentication.",
   "PHONE NUMBER": "PHONE NUMBER",
   "Please enter a valid phone number.": "Please enter a valid phone number.",
+  "Copied: ": "Copied: {{copiedValue}}",
   "Paste this code on . This gift card cannot be recovered if your claim code is lost.": "Paste this code on . This gift card cannot be recovered if your claim code is lost.",
   "Unarchive Card": "Unarchive Card",
   "Archive Card": "Archive Card",
@@ -725,6 +726,7 @@
   "ASSOCIATED WALLET": "ASSOCIATED WALLET",
   "Token Address": "Token Address",
   "CUSTOM TOKEN CONTRACT": "CUSTOM TOKEN CONTRACT",
+  "Add ": "Add ",
   "Send Max": "Send Max",
   "You will not be able to add funds to your wallet until you backup your recovery phrase.": "You will not be able to add funds to your wallet until you backup your recovery phrase.",
   "BACKUP YOUR KEY": "BACKUP YOUR KEY",
@@ -734,6 +736,7 @@
   "Backup your Recovery Phrase": "Backup your Recovery Phrase",
   "Because your encrypted password is not stored by BitPay, there is no way to reset it.": "Because your encrypted password is not stored by BitPay, there is no way to reset it.",
   "If you need to regain access to your wallet because you have forgotten or lost the encrypt password, you must restore the wallet using the 12 word recovery phrase.": "If you need to regain access to your wallet because you have forgotten or lost the encrypt password, you must restore the wallet using the 12 word recovery phrase.",
+  "If you do not have the recovery phrase, you will not be able to regain access to your wallet": "If you do not have the recovery phrase, you will not be able to regain access to your wallet",
   "Read more.": "Read more.",
   "Share this invitation with the devices joining this account. Each copayer has their own recovery phrase. To recover funds stored in a Shared Wallet you will need the recovery phrase from each copayer.": "Share this invitation with the devices joining this account. Each copayer has their own recovery phrase. To recover funds stored in a Shared Wallet you will need the recovery phrase from each copayer.",
   "Waiting for authorized copayers to join": "Waiting for authorized copayers to join",
@@ -821,6 +824,7 @@
   "Payment Request": "Payment Request",
   "Share this QR code to receive in your wallet .": "Share this QR code to receive in your wallet .",
   "Receive ": "Receive ",
+  "Confirm ": "Confirm {{title}}",
   "Enable Replace-By-Fee": "Enable Replace-By-Fee",
   "Edit gas limit": "Edit gas limit",
   "Nonce": "Nonce",
@@ -949,14 +953,6 @@
   "Invitation": "Invitation",
   "Select a currency": "Select a currency",
   "Select a key": "Select a key",
-  "There is a pending transaction with a lower account nonce. Wait for your pending transactions to confirm or enable \"ETH Queued transactions\" in Advanced Settings.": "There is a pending transaction with a lower account nonce. Wait for your pending transactions to confirm or enable \"ETH Queued transactions\" in Advanced Settings.",
-  "Cannot send XRP to the same wallet you are trying to send from. Please check the destination address and try it again.": "Cannot send XRP to the same wallet you are trying to send from. Please check the destination address and try it again.",
-  "Insufficient confirmed funds": "Insufficient confirmed funds",
-  "You do not have enough confirmed funds to make this payment. Wait for your pending transactions to confirm or enable \"Use unconfirmed funds\" in Advanced Settings.": "You do not have enough confirmed funds to make this payment. Wait for your pending transactions to confirm or enable \"Use unconfirmed funds\" in Advanced Settings.",
-  "Insufficient funds": "Insufficient funds",
-  "No compatible wallets": "No compatible wallets",
-  "You currently don't have any wallets capable of sending this payment. Would you like to import one?": "You currently don't have any wallets capable of sending this payment. Would you like to import one?",
-  "Maybe Later": "Maybe Later",
   "Wallet required": "Wallet required",
   "To continue you will need to add a wallet to your key.": "To continue you will need to add a wallet to your key.",
   "Add wallet": "Add wallet",
