--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -312,7 +312,7 @@
   "Terms of use": "Terms of use",
   "5 USD minimum fee or 2.9% of the amount + 0.30 USD, whichever is greater + Required miners fee.": "5 USD minimum fee or 2.9% of the amount + 0.30 USD, whichever is greater + Required miners fee.",
   "5 USD minimum fee or 3.9% of the amount + 0.30 USD, whichever is greater + Required miners fee.": "5 USD minimum fee or 3.9% of the amount + 0.30 USD, whichever is greater + Required miners fee.",
-  "Or its equivalent in .": "Or its equivalent in .",
+  "Or its equivalent in .": "Or its equivalent in {{fiatCurrency}}.",
   "User Agreement": "User Agreement",
   "The final crypto amount you receive when the transaction is complete may differ because it is based on the exchange rates of the providers.": "The final crypto amount you receive when the transaction is complete may differ because it is based on the exchange rates of the providers.",
   "Additional third-party fees may apply.": "Additional third-party fees may apply.",
@@ -358,7 +358,7 @@
   "Submit a ticket": "Submit a ticket",
   "This is a temporary Changelly decision. If you have further questions please reach out to them.": "This is a temporary Changelly decision. If you have further questions please reach out to them.",
   "Changelly getPairsParams Error: ": "Changelly getPairsParams Error: ",
-  "Changelly has temporarily disabled - pair. If you have further questions please reach out to them.": "Changelly has temporarily disabled - pair. If you have further questions please reach out to them.",
+  "Changelly has temporarily disabled - pair. If you have further questions please reach out to them.": "Changelly has temporarily disabled {{fromWalletSelected}}-{{toWalletSelected}} pair. If you have further questions please reach out to them.",
   "The amount entered is greater than the maximum allowed: ": "The amount entered is greater than the maximum allowed: ",
   "Use Max Amount": "Use Max Amount",
   "The amount entered is lower than the minimum allowed: ": "The amount entered is lower than the minimum allowed: ",
