--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -570,9 +570,9 @@
   "Enter Phone": "Enter Phone",
   "Buy  Gift Card": "Buy  Gift Card",
   "Activation fee": "Activation fee",
-  "gift cards contain an additional activation fee of .": "gift cards contain an additional activation fee of .",
+  "gift cards contain an additional activation fee of .": "{{displayName}} gift cards contain an additional activation fee of {{fiatAmount}}.",
   "Below Minimum Amount": "Below Minimum Amount",
-  "The purchase amount must be at least,. Please modify your amount.": "The purchase amount must be at least,. Please modify your amount.",
+  "The purchase amount must be at least . Please modify your amount.": "The purchase amount must be at least {{fiatAmount}}. Please modify your amount.",
   "Purchase Limit Exceeded": "Purchase Limit Exceeded",
   "The purchase amount is limited to . Please modify your amount.": "The purchase amount is limited to . Please modify your amount.",
   "Purchase Amounts:": "Purchase Amounts:",
