Adds context to string

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -572,7 +572,7 @@
   "Activation fee": "Activation fee",
   "gift cards contain an additional activation fee of .": "{{displayName}} gift cards contain an additional activation fee of {{fiatAmount}}.",
   "Below Minimum Amount": "Below Minimum Amount",
-  "The purchase amount must be at least . Please modify your amount.": "The purchase amount must be at least {{fiatAmount}}. Please modify your amount.",
+  "The purchase amount must be at least {{fiatAmount}}. Please modify your amount.": "The purchase amount must be at least {{fiatAmount}}. Please modify your amount.",
   "Purchase Limit Exceeded": "Purchase Limit Exceeded",
   "The purchase amount is limited to . Please modify your amount.": "The purchase amount is limited to . Please modify your amount.",
   "Purchase Amounts:": "Purchase Amounts:",
@@ -588,7 +588,7 @@
   "PHONE NUMBER": "PHONE NUMBER",
   "Please enter a valid phone number.": "Please enter a valid phone number.",
   "Copied: ": "Copied: {{copiedValue}}",
-  "Paste this code on . This gift card cannot be recovered if your claim code is lost.": "Paste this code on . This gift card cannot be recovered if your claim code is lost.",
+  "Paste this code on {{website}}. This gift card cannot be recovered if your claim code is lost.": "Paste this code on {{website}}. This gift card cannot be recovered if your claim code is lost.",
   "Unarchive Card": "Unarchive Card",
   "Archive Card": "Archive Card",
   "View Invoice": "View Invoice",
